standards/gnds-2.0-alpha/alpha/c/src/v2.0/reduced/Function1ds.h

// --- Const-aware handles.
typedef const struct Function1dsClass *const ConstHandle2ConstFunction1ds;
typedef       struct Function1dsClass *const ConstHandle2Function1ds;
// --- Get, by index, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByIndexConst(
   ConstHandle2ConstFunction1ds This,
   const int index
);
// +++ Get, by index, non-const
extern_c Handle2XYs1d
Function1dsXYs1dGetByIndex(
   ConstHandle2Function1ds This,
   const int index
);
// +++ Set, by index
extern_c void
Function1dsXYs1dSetByIndex(
   ConstHandle2Function1ds This,
   const int index,
   ConstHandle2ConstXYs1d XYs1d
);
// +++ Has, by interpolation
extern_c int
Function1dsXYs1dHasByInterpolation(
   ConstHandle2ConstFunction1ds This,
   const char *const interpolation
);
// --- Get, by interpolation, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByInterpolationConst(
   ConstHandle2ConstFunction1ds This,
   const char *const interpolation
);
// +++ Get, by interpolation, non-const
extern_c Handle2XYs1d
Function1dsXYs1dGetByInterpolation(
   ConstHandle2Function1ds This,
   const char *const interpolation
);
// +++ Set, by interpolation
extern_c void
Function1dsXYs1dSetByInterpolation(
   ConstHandle2Function1ds This,
   const char *const interpolation,
   ConstHandle2ConstXYs1d XYs1d
);
// +++ Has, by outerDomainValue
extern_c int
Function1dsXYs1dHasByOuterDomainValue(
   ConstHandle2ConstFunction1ds This,
   const double outerDomainValue
);
// --- Get, by outerDomainValue, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByOuterDomainValueConst(
   ConstHandle2ConstFunction1ds This,
   const double outerDomainValue
);
// +++ Get, by outerDomainValue, non-const
extern_c Handle2XYs1d
Function1dsXYs1dGetByOuterDomainValue(
   ConstHandle2Function1ds This,
   const double outerDomainValue
);
// +++ Set, by outerDomainValue
extern_c void
Function1dsXYs1dSetByOuterDomainValue(
   ConstHandle2Function1ds This,
   const double outerDomainValue,
   ConstHandle2ConstXYs1d XYs1d
);