versions/GNDS-v2.0/GNDS/fortran/src/v2.0/reduced/Function1ds.f03


!! Get, by index, const
function Function1dsXYs1dGetByIndexConst(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByIndexConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: Function1dsXYs1dGetByIndexConst
end function Function1dsXYs1dGetByIndexConst

!! Get, by index
function Function1dsXYs1dGetByIndex(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByIndex')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: Function1dsXYs1dGetByIndex
end function Function1dsXYs1dGetByIndex

!! Set, by index
subroutine Function1dsXYs1dSetByIndex(handle, meta, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByIndex')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByIndex

!! ------------------------
!! Re: metadatum interpolation
!! ------------------------

!! Has, by interpolation
function Function1dsXYs1dHasByInterpolation(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dHasByInterpolation')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: Function1dsXYs1dHasByInterpolation
end function Function1dsXYs1dHasByInterpolation

!! Get, by interpolation, const
function Function1dsXYs1dGetByInterpolationConst(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dGetByInterpolationConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: Function1dsXYs1dGetByInterpolationConst
end function Function1dsXYs1dGetByInterpolationConst

!! Get, by interpolation
function Function1dsXYs1dGetByInterpolation(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dGetByInterpolation')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: Function1dsXYs1dGetByInterpolation
end function Function1dsXYs1dGetByInterpolation

!! Set, by interpolation
subroutine Function1dsXYs1dSetByInterpolation(handle, meta, metaSize, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByInterpolation')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByInterpolation

!! ------------------------
!! Re: metadatum outerDomainValue
!! ------------------------

!! Has, by outerDomainValue
function Function1dsXYs1dHasByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsXYs1dHasByOuterDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   integer(c_int) :: Function1dsXYs1dHasByOuterDomainValue
end function Function1dsXYs1dHasByOuterDomainValue

!! Get, by outerDomainValue, const
function Function1dsXYs1dGetByOuterDomainValueConst(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByOuterDomainValueConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: Function1dsXYs1dGetByOuterDomainValueConst
end function Function1dsXYs1dGetByOuterDomainValueConst

!! Get, by outerDomainValue
function Function1dsXYs1dGetByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByOuterDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: Function1dsXYs1dGetByOuterDomainValue
end function Function1dsXYs1dGetByOuterDomainValue

!! Set, by outerDomainValue
subroutine Function1dsXYs1dSetByOuterDomainValue(handle, meta, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByOuterDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByOuterDomainValue


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module reducedFunction1ds
